add Diffusion Model for Video Generation

--- a/_posts/reading/2024-05-05-理工男谈理财.md
+++ b/_posts/reading/2024-05-05-理工男谈理财.md
@@ -3,7 +3,7 @@ title: 理工男谈理财
 author: zssloth
 date: 2024-05-05 14:00:00 +0800
 categories: [读书] # only level-2 supported
-tags: [reading-notes] # TAG names should always be lowercase
+tags: [读书笔记] # TAG names should always be lowercase
 toc: true # table of contains, default to true
 math: false
 ---
